--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'com.github.docker-java:docker-java:3.2.7'
+	implementation 'com.github.docker-java:docker-java-transport-httpclient5:3.2.7'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
